Cleanup Lockscreen Styles/Add Middle Ring Unlock

--- a/res/xml/lockscreen_style_settings.xml
+++ b/res/xml/lockscreen_style_settings.xml
@@ -16,8 +16,9 @@
  -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Styles -->
-    <PreferenceCategory android:title="@string/general_title">
+    <!-- Appearance -->
+    <PreferenceCategory 
+        android:title="@string/pref_lockscreen_appearance_title">
 
         <ListPreference android:key="pref_lockscreen_style"
             android:dialogTitle="@string/pref_lockscreen_style_title"
@@ -33,36 +34,48 @@
             android:entries="@array/pref_in_call_style_entries"
             android:entryValues="@array/pref_in_call_style_values" />
 
-        <CheckBoxPreference android:key="pref_lockscreen_custom_app_toggle"
-            android:title="@string/pref_lockscreen_custom_app_toggle_title"
-            android:summary="@string/pref_lockscreen_custom_app_toggle_summary" />
-
-        <CheckBoxPreference android:key="pref_lockscreen_rotary_unlock_down_toggle"
-            android:title="@string/pref_lockscreen_rotary_unlock_down_title"
-            android:summary="@string/pref_lockscreen_rotary_unlock_down_summary" />
-
-        <CheckBoxPreference android:key="pref_lockscreen_hide_carrier"
-            android:title="@string/pref_lockscreen_hide_carrier_title"
-            android:summary="@string/pref_lockscreen_hide_carrier_summary" />
-
-        <CheckBoxPreference android:key="pref_lockscreen_rotary_hide_arrows_toggle"
-            android:title="@string/pref_lockscreen_rotary_hide_arrows_title"
-            android:summary="@string/pref_lockscreen_rotary_hide_arrows_summary" />
-
-        <CheckBoxPreference android:key="pref_lockscreen_custom_icon_style"
-            android:title="@string/pref_lockscreen_custom_icon_style_title"
-            android:summary="@string/pref_lockscreen_custom_icon_style_summary"
-            android:dependency="pref_lockscreen_custom_app_toggle" />
-
-        <Preference android:key="pref_lockscreen_custom_app_activity"
-            android:dependency="pref_lockscreen_custom_app_toggle"
-            android:title="@string/pref_lockscreen_custom_app_activity_title" />
-            
         <ListPreference android:key="pref_lockscreen_background"
             android:dialogTitle="@string/pref_lockscreen_custom_background_dialog_title"
             android:title="@string/pref_lockscreen_custom_background_title"
             android:summary="@string/pref_lockscreen_custom_background_summary"
             android:entries="@array/pref_lockscreen_background_entries"
             android:entryValues="@array/pref_lockscreen_background_values"/>
+
     </PreferenceCategory>
+
+    <!-- Customize -->
+    <PreferenceCategory 
+        android:title="@string/pref_lockscreen_customize_title">
+
+        <CheckBoxPreference android:key="pref_lockscreen_custom_app_toggle"
+            android:title="@string/pref_lockscreen_custom_app_toggle_title"
+            android:summary="@string/pref_lockscreen_custom_app_toggle_summary" />
+
+        <Preference android:key="pref_lockscreen_custom_app_activity"
+            android:dependency="pref_lockscreen_custom_app_toggle"
+            android:title="@string/pref_lockscreen_custom_app_activity_title" />
+
+        <CheckBoxPreference android:key="pref_lockscreen_ring_unlock_middle_toggle"
+            android:title="@string/pref_lockscreen_ring_unlock_middle_title"
+            android:summary="@string/pref_lockscreen_ring_unlock_middle_summary" />
+
+        <CheckBoxPreference android:key="pref_lockscreen_rotary_unlock_down_toggle"
+            android:title="@string/pref_lockscreen_rotary_unlock_down_title"
+            android:summary="@string/pref_lockscreen_rotary_unlock_down_summary" />
+
+        <CheckBoxPreference android:key="pref_lockscreen_rotary_hide_arrows_toggle"
+            android:title="@string/pref_lockscreen_rotary_hide_arrows_title"
+            android:summary="@string/pref_lockscreen_rotary_hide_arrows_summary" />
+
+        <CheckBoxPreference android:key="pref_lockscreen_hide_carrier"
+            android:title="@string/pref_lockscreen_hide_carrier_title"
+            android:summary="@string/pref_lockscreen_hide_carrier_summary" />
+
+        <CheckBoxPreference android:key="pref_lockscreen_custom_icon_style"
+            android:title="@string/pref_lockscreen_custom_icon_style_title"
+            android:summary="@string/pref_lockscreen_custom_icon_style_summary"
+            android:dependency="pref_lockscreen_custom_app_toggle" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
