--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -36,8 +36,8 @@
 
     <string-array name="entries_status_bar_battery">
         <item>Default</item>
-        <item>Percentage</item>
-        <item>Bar Battery</item>
+        <item>Icon</item>
+        <item>Bar</item>
     </string-array>
 
     <string-array name="values_status_bar_battery" translatable="false">
