--- a/res/xml/ui_status_bar.xml
+++ b/res/xml/ui_status_bar.xml
@@ -56,8 +56,7 @@
 			android:title="@string/ui_status_bar_battery_color_title"
 			android:summary="@string/ui_status_bar_battery_color_summary"
 			android:entries="@array/entries_status_bar_battery_color"
-			android:entryValues="@array/values_status_bar_battery_color"
-            android:persistent="false" />
+			android:entryValues="@array/values_status_bar_battery_color" />
 
 		<CheckBoxPreference android:key="pref_status_bar_compact_carrier"
 			android:title="@string/ui_status_bar_compact_carrier_title"
