--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -35,7 +35,7 @@
     </string-array>
 
     <string-array name="entries_status_bar_battery">
-        <item>Default</item>
+        <item>Stock</item>
         <item>Icon</item>
         <item>Bar</item>
     </string-array>
