--- a/res/xml/ui_status_bar.xml
+++ b/res/xml/ui_status_bar.xml
@@ -58,6 +58,11 @@
 			android:entries="@array/entries_status_bar_battery_color"
 			android:entryValues="@array/values_status_bar_battery_color" />
 
+        <CheckBoxPreference android:key="pref_status_bar_battery_low_batt"
+            android:title="@string/ui_status_bar_battery_low_batt_title"
+            android:summary="@string/ui_status_bar_battery_low_batt_summary"
+            android:defaultValue="true" />
+
 		<CheckBoxPreference android:key="pref_status_bar_compact_carrier"
 			android:title="@string/ui_status_bar_compact_carrier_title"
 			android:summary="@string/ui_status_bar_compact_carrier_summary"
