--- a/res/xml/propmodder_settings.xml
+++ b/res/xml/propmodder_settings.xml
@@ -104,5 +104,13 @@
             android:title="@string/pref_check_in_title"
             android:summary="@string/pref_check_in_summary" />
 
+        <CheckBoxPreference android:key="pref_3g_speed"
+            android:title="@string/pref_3g_speed_title"
+            android:summary="@string/pref_3g_speed_summary" />
+
+        <CheckBoxPreference android:key="pref_gpu"
+            android:title="@string/pref_gpu_title"
+            android:summary="@string/pref_gpu_summary" />
+
     </PreferenceCategory>
 </PreferenceScreen>
