--- a/res/xml/lockscreen_unlock_settings.xml
+++ b/res/xml/lockscreen_unlock_settings.xml
@@ -20,6 +20,10 @@
     <PreferenceCategory android:key="pref_category_unlock_settings"
         android:title="@string/general_title">
 
+        <CheckBoxPreference android:key="pref_lockscreen_disable_on_security"
+            android:title="@string/pref_lockscreen_disable_on_security_title"
+            android:summary="@string/pref_lockscreen_disable_on_security_summary" />
+
         <CheckBoxPreference android:key="pref_trackball_unlock"
             android:title="@string/pref_trackball_unlock_title"
             android:summary="@string/pref_trackball_unlock_summary" />
