Rework Multiple Value Power Widgets

--- a/res/xml/power_widget.xml
+++ b/res/xml/power_widget.xml
@@ -22,12 +22,13 @@
 
     <PreferenceCategory android:title="@string/title_button_modes">
 
-        <ListPreference android:key="pref_brightness_mode" 
+        <MultiSelectListPreference android:key="pref_brightness_mode" 
             android:dialogTitle="@string/pref_brightness_mode_title"
-            android:title="@string/pref_brightness_mode_title" 
+            android:title="@string/pref_brightness_mode_title"
             android:summary="@string/pref_brightness_mode_summary"
-            android:entries="@array/entries_brightness_widget" 
-            android:entryValues="@array/values_brightness_widget" />
+            android:entries="@array/entries_brightness_widget"
+            android:entryValues="@array/values_brightness_widget"
+            android:persistent="false" />
 
         <ListPreference android:key="pref_network_mode" 
             android:dialogTitle="@string/pref_network_mode_title"
@@ -43,12 +44,13 @@
             android:entries="@array/entries_screentimeout_widget" 
             android:entryValues="@array/values_screentimeout_widget" />
 
-        <ListPreference android:key="pref_ring_mode" 
+        <MultiSelectListPreference android:key="pref_ring_mode"
             android:dialogTitle="@string/pref_ring_mode_title"
-            android:title="@string/pref_ring_mode_title" 
+            android:title="@string/pref_ring_mode_title"
             android:summary="@string/pref_ring_mode_summary"
-            android:entries="@array/entries_ring_widget" 
-            android:entryValues="@array/values_ring_widget" />
+            android:entries="@array/entries_ring_widget"
+            android:entryValues="@array/values_ring_widget"
+            android:persistent="false" />
 
         <ListPreference android:key="pref_flash_mode" 
             android:dialogTitle="@string/pref_flash_mode_title"
