--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -502,9 +502,9 @@
         <item>1</item>
     </string-array>
 
-   <string-array name="entries_brightness_widget" formatted="false">
-        <item>Auto</item>
-        <item>Dim</item>
+   <string-array name="entries_brightness_widget" formatted="false" translatable="false">
+        <item>@string/brightness_mode_auto</item>
+        <item>@string/brightness_mode_dim</item>
         <item>25%</item>
         <item>50%</item>
         <item>75%</item>
