--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -38,7 +38,7 @@
         <item>Stock</item>
         <item>Icon</item>
         <item>Bar</item>
-        <item>Hidden</item>
+        <item>Hide</item>
     </string-array>
 
     <string-array name="values_status_bar_battery" translatable="false">
