Revert "removed rotary lock option added invisible lock option "
This reverts commit 32e3de4664ac7bbb00aa5895b97f0f3985e25647.

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -605,7 +605,7 @@
 
     <string-array name="pref_lockscreen_style_entries">
         <item>Slider</item>
-        <item>Invisible</item>
+        <item>Rotary</item>
         <item>Sense</item>
         <item>Lense</item>
         <item>Ring</item>
