--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -355,6 +355,8 @@
     </string-array>
 
     <string-array name="entries_light_filter_window">
+        <item>2 s</item>
+        <item>5 s</item>
         <item>10 s</item>
         <item>20 s</item>
         <item>30 s</item>
@@ -364,6 +366,8 @@
     </string-array>
 
     <string-array name="values_light_filter_window" translatable="false">
+        <item>2000</item>
+        <item>5000</item>
         <item>10000</item>
         <item>20000</item>
         <item>30000</item>
