Haptic Feedback Quiet Hours

--- a/res/xml/sound_quiet_hours_settings.xml
+++ b/res/xml/sound_quiet_hours_settings.xml
@@ -49,6 +49,12 @@
 			android:summaryOff="@string/quiet_hours_mute_off"
             android:dependency="quiet_hours_enabled" />
 
+        <CheckBoxPreference android:key="quiet_hours_haptic"
+            android:title="@string/quiet_hours_haptic"
+            android:summaryOn="@string/quiet_hours_haptic_on"
+            android:summaryOff="@string/quiet_hours_haptic_off"
+            android:dependency="quiet_hours_enabled" />
+
 		<CheckBoxPreference android:key="quiet_hours_still"
 			android:title="@string/quiet_hours_still"
             android:summaryOn="@string/quiet_hours_still_on"
