--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -23,6 +23,8 @@
     <bool name="has_camera_button">false</bool>
     <!-- Notification LED can show any color -->
     <bool name="has_rgb_notification_led">false</bool>
+    <!-- Notification LED has single color only -->
+    <bool name="has_single_notification_led">false</bool>
     <!-- Notification LED can show green and amber only -->
     <bool name="has_dual_notification_led">false</bool>
     <!-- Notification LED mixes up amber with green and red -->
