Enable/Disable Volume Key Beeps

--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -66,6 +66,12 @@
             android:summary="@string/sound_lock_volume_keys_summary"
             android:persistent="false" />
 
+        <CheckBoxPreference android:key="volume-key-beeps"
+            android:title="@string/sound_volume_key_beeps_title"
+            android:summaryOn="@string/sound_volume_key_beeps_summary_on"
+            android:summaryOff="@string/sound_volume_key_beeps_summary_off"
+            android:persistent="false" />
+
     </PreferenceCategory>
 
     <!-- Quiet Hours -->
