--- a/res/xml/lockscreen_style_settings.xml
+++ b/res/xml/lockscreen_style_settings.xml
@@ -59,6 +59,10 @@
             android:title="@string/pref_lockscreen_ring_unlock_middle_title"
             android:summary="@string/pref_lockscreen_ring_unlock_middle_summary" />
 
+        <CheckBoxPreference android:key="pref_lockscreen_ring_minimal_toggle"
+            android:title="@string/pref_lockscreen_ring_minimal_title"
+            android:summary="@string/pref_lockscreen_ring_minimal_summary" />
+            
         <CheckBoxPreference android:key="pref_lockscreen_rotary_unlock_down_toggle"
             android:title="@string/pref_lockscreen_rotary_unlock_down_title"
             android:summary="@string/pref_lockscreen_rotary_unlock_down_summary" />
