--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -37,8 +37,8 @@
     <string-array name="entries_status_bar_battery">
         <item>Icon</item>
         <item>Percent</item>
-        <item>StatusBar</item>
-        <item>Hide</item>
+        <item>Statusbar</item>
+        <item>Hidden</item>
     </string-array>
 
     <string-array name="values_status_bar_battery" translatable="false">
@@ -50,25 +50,11 @@
 
     <string-array name="entries_status_bar_battery_color">
         <item>Theme</item>
-        <item>Black</item>
-        <item>Blue</item>
-        <item>Gray</item>
-        <item>Green</item>
-        <item>Red</item>
-        <item>White</item>
-        <item>Yellow</item>
         <item>Custom</item>
     </string-array>
 
     <string-array name="values_status_bar_battery_color" translatable="false">
         <item>theme</item>
-        <item>black</item>
-        <item>blue</item>
-        <item>gray</item>
-        <item>green</item>
-        <item>red</item>
-        <item>white</item>
-        <item>yellow</item>
         <item>custom</item>
     </string-array>
 
