Jdk Updater/Parchment Removal Options

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -770,9 +770,11 @@
         <item>DeskClock</item>
         <item>Email</item>
         <item>Gmail</item>
+        <item>Jdk Updater</item>
         <item>LauncherPro</item>
         <item>LiveWallpapers</item>
         <item>News and Weather</item>
+        <item>Parchment</item>
         <item>RomToolbox</item>
         <item>Titanium Backup</item>
     </string-array>
@@ -782,9 +784,11 @@
         <item>rmdeskclock</item>
         <item>rmemail</item>
         <item>rmgmail</item>
+        <item>rmjdkupdater</item>
         <item>rmlauncherpro</item>
         <item>rmlivewallpapers</item>
         <item>rmgenie</item>
+        <item>rmparchment</item>
         <item>rmromtoolbox</item>
         <item>rmtitanium</item>
     </string-array>
