--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,5 +7,5 @@
         <ImageView  
 	    android:layout_width="fill_parent" 
             android:layout_height="wrap_content" 
-            android:src="@drawable/n00bware" />
+            android:src="@drawable/splash" />
 </LinearLayout>
