--- a/res/layout/goodies.xml
+++ b/res/layout/goodies.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/goodies_view">
 
     <!-- droid does gingy -->
     <TextView 
