--- a/res/layout/widget.xml
+++ b/res/layout/widget.xml
@@ -21,7 +21,8 @@
             android:layout_height="0dip"
             android:layout_weight="1"
             android:scaleType="center"
-            android:src="@drawable/render_off" />
+            android:src="@drawable/render_off"
+            />
             
          <TextView
             android:id="@+id/ind"
@@ -31,6 +32,7 @@
             android:gravity="center"
             android:textStyle="bold"
             android:textColor="#ffffffaa"
-            android:text="@string/renderfx_temp" />
-        </LinearLayout>	
+            android:text="@string/renderfx_temp"
+            />
+        </LinearLayout>
 </LinearLayout>
