--- a/res/xml/backlight_settings.xml
+++ b/res/xml/backlight_settings.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Light sensor filter -->
     <PreferenceCategory android:title="@string/light_filter_title">
-
         <!-- Enable -->
         <CheckBoxPreference android:key="light_filter_enabled"
-            android:title="@string/light_filter_enabled_title"
-            android:summary="@string/light_filter_enabled_summary"
+            android:title="@string/light_filter_enabled_title" android:summary="@string/light_filter_enabled_summary"
             android:persistent="false" />
-            
         <!-- Filter window -->
         <ListPreference android:key="light_filter_window"
-            android:title="@string/light_filter_window_title"
-            android:summary="@string/light_filter_window_summary"
+            android:title="@string/light_filter_window_title" android:summary="@string/light_filter_window_summary"
             android:dialogTitle="@string/light_filter_window_title"
             android:entries="@array/entries_light_filter_window"
             android:entryValues="@array/values_light_filter_window"
-            android:dependency="light_filter_enabled"
-            android:persistent="false" />
-        
+            android:dependency="light_filter_enabled" android:persistent="false" />
         <!-- Reset -->
         <ListPreference android:key="light_filter_reset"
             android:title="@string/light_filter_reset_title"
@@ -27,9 +21,7 @@
             android:dialogTitle="@string/light_filter_reset_title"
             android:entries="@array/entries_light_filter_reset"
             android:entryValues="@array/values_light_filter_reset"
-            android:dependency="light_filter_enabled"
-            android:persistent="false" />
-
+            android:dependency="light_filter_enabled" android:persistent="false" />
         <!-- Sample interval -->
         <ListPreference android:key="light_filter_interval"
             android:title="@string/light_filter_interval_title"
@@ -37,19 +29,14 @@
             android:dialogTitle="@string/light_filter_interval_title"
             android:entries="@array/entries_light_filter_interval"
             android:entryValues="@array/values_light_filter_interval"
-            android:dependency="light_filter_enabled"
-            android:persistent="false" />        
-
+            android:dependency="light_filter_enabled" android:persistent="false" />        
     </PreferenceCategory>
-
     <!-- Light levels -->
     <PreferenceCategory android:title="@string/light_levels_title">
-
         <!-- Enable custom levels -->
         <CheckBoxPreference android:key="light_levels_enabled"
             android:title="@string/light_levels_enabled_title"
             android:persistent="false" />
-
         <!-- Screen dim level -->
         <ListPreference android:key="light_levels_dim"
             android:title="@string/light_levels_dim_title"
@@ -58,22 +45,19 @@
             android:entries="@array/entries_light_levels_dim"
             android:entryValues="@array/values_light_levels_dim"
             android:dependency="light_levels_enabled" android:persistent="false" />
-
         <!-- Level editor -->
         <PreferenceScreen android:key="light_levels_editor"
             android:title="@string/light_levels_editor_title"
             android:dependency="light_levels_enabled">
             <intent android:action="android.intent.action.MAIN"
-                android:targetPackage="com.cyanogenmod.settings"
-                android:targetClass="com.cyanogenmod.settings.activities.LightLevelsActivity" />
+                android:targetPackage="com.liquid.settings"
+                android:targetClass="com.liquid.settings.activities.LightLevelsActivity" />
         </PreferenceScreen>
-
         <!-- Allow screen brightness to decrease -->
         <CheckBoxPreference android:key="light_decrease_enabled"
             android:title="@string/light_decrease_enabled_title"
             android:summary="@string/light_decrease_enabled_summary"
             android:persistent="false" />
-
         <!-- Screen decrease hysteresis -->
         <ListPreference android:key="light_decrease_hysteresis"
             android:title="@string/light_decrease_hysteresis_title"
