--- a/res/layout/settings_view.xml
+++ b/res/layout/settings_view.xml
@@ -3,7 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:padding="4dip"
         android:gravity="center_horizontal"
-        android:layout_width="match_parent" android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v4.view.ViewPager
             android:id="@+id/settings_pager"
             android:layout_width="match_parent"
