--- a/res/layout/boot_anims.xml
+++ b/res/layout/boot_anims.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:id="@+id/boot_anims_scrollview" 
+    android:layout_width="fill_parent" 
+    android:layout_height="fill_parent" 
+    android:scrollbars="vertical"
+    android:fillViewport="true" >
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -703,3 +710,4 @@
         android:layout_height="wrap_content" />
 
 </LinearLayout>
+</ScrollView>
