--- a/res/layout-finger/order_power_widget_buttons_activity.xml
+++ b/res/layout-finger/order_power_widget_buttons_activity.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:gravity="center_vertical" >
 
-    <com.cyanogenmod.settings.widgets.TouchInterceptor
+    <com.liquid.settings.widgets.TouchInterceptor
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
